:sparkles: feat: API, swgaeer 정리
