# packages/back/src/controllers/posts.ts
@@ -8,6 +8,8 @@ const PAGE_SIZE = 8;
 export const getPostByPage =
   (model: Model<Post>) => async (req: Request, res: Response) => {
     try {
+      console.log("getPostByPage");
+      console.log(req.query);
       const count = await model.count({});
       const page = Number(req.query.page);
       const IS_NEXT_PAGE_EXIST = count - page * PAGE_SIZE <= 0 ? null : true;
@@ -32,30 +34,11 @@ export const getPostByPage =
     }
   };
 
-export const getPostById =
-  (model: Model<Post>) => async (req: Request, res: Response) => {
-    try {
-      const id = req.query.id;
-      const results = await model.findOne(
-        { _id: id },
-        { thumbnail: 0, tags: 0, subTitle: 0 }
-      );
-      const resultObj = results?.toObject();
-      const resultBody = {
-        ...resultObj,
-        content: decode(results?.content),
-      };
-
-      return res.status(200).json(resultBody);
-    } catch (error) {
-      console.log(error);
-      return res.status(500).json({ error });
-    }
-  };
-
 export const getPostBySlug =
   (model: Model<Post>) => async (req: Request, res: Response) => {
     try {
+      console.log(req.query);
+      console.log("getPostBySlug");
       const results = await model.findOne({ urlSlug: req.query.slug });
       const resultObj = results?.toObject();
       const resultBody = {
