# packages/back/src/router/posts.ts
@@ -1,11 +1,7 @@
 import { Router } from "express";
 import model from "../models/Posts";
 import controller from "../controllers/Generic";
-import {
-  getPostById,
-  getPostByPage,
-  getPostBySlug,
-} from "../controllers/posts";
+import { getPostByPage, getPostBySlug } from "../controllers/posts";
 
 const router = Router();
 
@@ -14,22 +10,21 @@ router.get("/", controller.getAll(model));
 
 // 게시글 작성
 router.post("/", controller.create(model));
+// page로 게시글 목록 가져오기
+router.get(`/findByPage`, getPostByPage(model));
 
-// 게시글 목록 가져오기 (id)
-// ex) GET /artists/1, GET /artists/1/company/entertainment
-// router.get("/:id", controller.get(model));
-router.get("/findById", getPostById(model));
-// ID or Slug 선택할 것
+// slug로 게시글 가져오기 (게시글 상세보기 + 게시글 수정하기)
 router.get(`/findBySlug`, getPostBySlug(model));
 
 // 게시글 수정
+/*
+  Route Parameters
+  Request URL : http://localhost:8000/api/v1/posts/제목1
+  req.params: {slug: '제목1}
+*/
 router.patch("/:slug", controller.update(model));
 
 // 게시글 삭제
 router.delete("/:slug", controller.remove(model));
-
-// page로 게시글 가져오기
-// ex) GET /artists?name=hello
-router.get(`/findByPage`, getPostByPage(model));
 
 export default router;
